# gateway

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  INTEGRATION-VALIDATION.md  LICENSE  README.md  WORKER-PURPOSE.md  demo.sh  deny.toml  deny.toml.backup
.github/workflows/: ci-cd.yml
config/: gateway.yaml  waf-rules.yaml  worker.yaml
config/modsecurity/: README.md
config/modsecurity/custom/: 100-custom-allow.conf  200-custom-blocks.conf  300-application-specific.conf
config/modsecurity/owasp-crs/: crs-setup.conf
crates/gateway-auth/: Cargo.toml
crates/gateway-auth/src/: lib.rs
crates/gateway-cache/: Cargo.toml
crates/gateway-cache/src/: approximated_lru.rs  incremental_cleaner.rs  lib.rs  segmented_lru.rs
crates/gateway-cache/src/cluster/: coherence.rs  membership.rs  mod.rs
crates/gateway-core/: Cargo.toml  build.rs
crates/gateway-core/proto/: gateway_worker.proto
crates/gateway-core/src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  pingora_adapter.rs  pingora_config.rs  pingora_proxy.rs  pingora_service.rs  pingora_ssl.rs  proxy.rs  server.rs  types.rs  worker_client.rs
crates/gateway-core/src/ingress/: annotations.rs  controller.rs  mod.rs  resources.rs
crates/gateway-core/tests/: integration_tests.rs
crates/gateway-database/: Cargo.toml
crates/gateway-database/src/: lib.rs
crates/gateway-monitoring/: Cargo.toml
crates/gateway-monitoring/src/: lib.rs
crates/gateway-plugins/: Cargo.toml
crates/gateway-plugins/src/: lib.rs
crates/gateway-ssl/: Cargo.toml
crates/gateway-ssl/src/: acme.rs  certificate.rs  config.rs  error.rs  lib.rs  manager.rs  storage.rs  watcher.rs
crates/gateway-ssl/src/dns/: azure.rs  cloudflare.rs  mod.rs  oracle.rs  provider.rs  route53.rs
crates/gateway-waf/: Cargo.toml
crates/gateway-waf/src/: engine.rs  header_filter.rs  ip_filter.rs  lib.rs  modsecurity_engine.rs  modsecurity_tests.rs  patterns.rs  rate_limiter.rs  rules.rs  url_filter.rs
crates/gateway-worker/: Cargo.toml  build.rs
crates/gateway-worker/proto/: certificate.proto  configuration.proto  gateway_worker.proto  log_processing.proto
crates/gateway-worker/src/: certificate_manager.rs  config_manager.rs  grpc_server.rs  job_queue.rs  lib.rs  log_processor.rs  main.rs  service.rs
docker/: Dockerfile  docker-compose.yml
docs/: dns-providers.md  ingress-annotations.md
docs/cache/: DISTRIBUTED_CACHE_RESEARCH.md  IMPLEMENTATION_PLAN.md  VALIDATION_CHECKLIST.md
docs/configuration/: README.md
docs/installation/: README.md
helm/gateway/: Chart.yaml  values.yaml
helm/gateway/templates/: configmap.yaml  deployment.yaml  hpa.yaml  poddisruptionbudget.yaml  rbac.yaml  service.yaml
migrations/: 001_initial_schema.sql
scripts/: test-gateway.sh
src/: lib.rs
tests/integration/: gateway_tests.rs
