[workspace]
members = [
    "crates/gateway-core",
    "crates/gateway-waf",
    "crates/gateway-cache",
    "crates/gateway-database",
    "crates/gateway-auth",
    "crates/gateway-monitoring",
    "crates/gateway-plugins",
    "crates/gateway-ssl",
]
resolver = "2"

[workspace.dependencies]
# Pingora dependencies - now publicly available
pingora = { version = "0.5.0", features = ["lb", "proxy"] }
pingora-core = "0.5.0"
pingora-proxy = "0.5.0"
pingora-load-balancing = "0.5.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# HTTP/Web
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["full"] }

# Database drivers
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio-rustls", "migrate", "postgres", "sqlite", "any", "macros", "chrono", "uuid"] }
mongodb = "3.2"
aws-sdk-dynamodb = "1.86"
redis = { version = "0.32", features = ["tokio-comp"] }

# Security & Crypto
jsonwebtoken = "9.0"
bcrypt = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }
ring = "0.17"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
opentelemetry = "0.30"

# Configuration
config = "0.15"
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dashmap = "6.1"
once_cell = "1.19"
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Additional dependencies for SSL
rustls = "0.23"
rustls-webpki = "0.102"
x509-parser = "0.16"
pem = "3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
hvac = "0.1"
notify = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true