[package]
name = "gateway-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

gateway-database = { path = "../gateway-database" }