[package]
name = "gateway-cache"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }

gateway-database = { path = "../gateway-database" }