[package]
name = "gateway-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Pingora dependencies - now available for high-performance networking
pingora = { workspace = true, features = ["lb", "proxy"] }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-load-balancing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
bytes = "1.0"
reqwest = { workspace = true }

# gRPC client dependencies for Worker communication
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Local dependencies
gateway-waf = { path = "../gateway-waf" }
gateway-cache = { path = "../gateway-cache" }
gateway-database = { path = "../gateway-database" }
gateway-auth = { path = "../gateway-auth" }
gateway-monitoring = { path = "../gateway-monitoring" }
gateway-plugins = { path = "../gateway-plugins" }
gateway-ssl = { path = "../gateway-ssl" }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "gateway"
path = "src/main.rs"