[package]
name = "gateway-database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
mongodb = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tracing = { workspace = true }