[package]
name = "gateway-ssl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }

# TLS and cryptography
ring = { workspace = true }
rustls = { workspace = true }
rustls-webpki = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }

# ACME client dependencies
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

# Certificate storage
gateway-database = { path = "../gateway-database" }

# File system watching
notify = { workspace = true }

# JSON Web Token for ACME
jsonwebtoken = { workspace = true }

# Additional dependencies
once_cell = { workspace = true }