[package]
name = "gateway-worker"
version = "0.1.0"
edition = "2021"
authors = ["AwesomeAPI Brasil <contato@awesomeapi.com.br>"]
description = "Worker service for Gateway - handles background tasks, certificate management, and configuration updates"
license = "MIT"
repository = "https://github.com/awesomeapibrasil/gateway"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }
tonic-build = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Additional dependencies
futures = "0.3"

# TLS and certificate management
rustls = { workspace = true }
rustls-webpki = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

# Job queue and background processing
redis = { workspace = true }
dashmap = { workspace = true }

# Gateway crates
gateway-ssl = { path = "../gateway-ssl" }
gateway-database = { path = "../gateway-database" }
gateway-monitoring = { path = "../gateway-monitoring" }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "gateway-worker"
path = "src/main.rs"